--- a/angular-test/firstTest/src/app/pages/home/home.component.html
+++ b/angular-test/firstTest/src/app/pages/home/home.component.html
@@ -1,3 +1,25 @@
+<div class="searchBar">
+  <div class="searchName">
+    <input
+      id="nameInpu"
+      type="text"
+      (keydown)="getCountriesName()"
+      placeholder="Suche"
+    />
+  </div>
+  <div class="searchRegion">
+    <div class="dropdown">
+      <button name="dropbtn" class="dropbtn">Filter by Region</button>
+      <div name="dropdown-content" class="dropdown-content">
+        <a (click)="getCountries('Asia')">Asia</a>
+        <a (click)="getCountries('Europe')">Europe</a>
+        <a (click)="getCountries('Africa')">Africa</a>
+        <a (click)="getCountries('Americas')">Americas</a>
+        <a (click)="getCountries('Oceania')">Oceania</a>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="content">
   <app-country-card
     *ngFor="let country of countries$ | async"
