--- a/angular-test/firstTest/src/app/pages/nav-bar/nav-bar.component.html
+++ b/angular-test/firstTest/src/app/pages/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <h2>Where in the world?</h2>
+  <h2>Wo in der Welt?</h2>
   <div>
     <span (click)="setDark()"><p>Dark mode</p></span>
   </div>
