--- a/angular-test/firstTest/src/app/pages/detail/detail.component.css
+++ b/angular-test/firstTest/src/app/pages/detail/detail.component.css
@@ -52,6 +52,7 @@ img {
   padding-top: 50px;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 .border-countries-buttons {
   display: flex;
