--- a/angular-test/firstTest/src/app/pages/detail/detail.component.html
+++ b/angular-test/firstTest/src/app/pages/detail/detail.component.html
@@ -60,6 +60,6 @@
 </div>
 <ng-template #noData>
   <div class="noDataCon">
-    <p>Es gibt nicht genug Daten zu diesem Land</p>
+    <p>Bitte Warten. Daten werden geladen</p>
   </div>
 </ng-template>
