--- a/angular-test/firstTest/src/app/pages/home/home.component.html
+++ b/angular-test/firstTest/src/app/pages/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="searchBar">
-  <div class="searchName">
+  <div class="searchName" name="icon">
+    <span class="fa fa-search icon"></span>
     <input
+      name="nameInpu"
       id="nameInpu"
       type="text"
       (keydown)="getCountriesName()"
