--- a/angular-test/firstTest/src/app/pages/home/home.component.css
+++ b/angular-test/firstTest/src/app/pages/home/home.component.css
@@ -6,12 +6,31 @@
 .searchName {
   margin-left: 50px;
   margin-top: 30px;
+  background-color: var(--Very-Dark-Blue);
+  border-radius: 6px;
+  height: 40px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+.icon {
+  margin-left: 10px;
+  color: white;
 }
 input {
+  margin-left: 10px;
+  border-radius: 6px;
+  background-color: var(--Very-Dark-Blue);
   text-align: center;
   font-size: 20px;
-  height: 30px;
-  border-radius: 10px;
+  height: 40px;
+  border: none;
+  color: white;
+}
+.searchName:focus {
+}
+input:focus {
+  outline: none;
+  border: none;
+  border: 1px white solid;
 }
 .searchRegion {
   margin-right: 50px;
@@ -24,11 +43,13 @@ input {
 }
 .dropbtn {
   background-color: var(--Very-Dark-Blue);
-  border-radius: 10px;
+  border-radius: 6px;
   color: rgb(255, 255, 255);
   padding: 16px;
   font-size: 16px;
   border: none;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 .dropdown {
@@ -36,12 +57,27 @@ input {
   display: inline-block;
   color: white;
 }
+.dropdown::before {
+  content: "";
+  position: absolute;
+  width: 140px;
+  height: 10px;
+}
+
+.dropdown::before {
+  top: 100%;
+}
 
 .dropdown-content {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  margin-top: 10px;
   display: none;
   position: absolute;
   background-color: var(--Very-Dark-Blue);
-  min-width: 120px;
+  min-width: 145px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
@@ -86,4 +122,13 @@ p {
 }
 .text {
   margin: 30px;
+}
+@media screen and (max-width: 600px) {
+  .searchName {
+    width: 190px;
+  }
+  input {
+    width: 120px;
+    font-size: 13px;
+  }
 }
