--- a/chiemgau48reloaded/style.scss
+++ b/chiemgau48reloaded/style.scss
@@ -3,7 +3,7 @@
 $backgroundLight: #e4f1fe;
 $backgroundDark: #22313f;
 $textColorLight: #34495e;
-$sidebarBackgroundDark: #e4f1fe;
+$sidebarBackgroundLight: #e4f1fe;
 $sidebarBackgroundDark: #304253;
 @mixin flexCol {
   display: flex;
@@ -18,7 +18,8 @@ $sidebarBackgroundDark: #304253;
   }
 }
 body {
-  background-color: $backgroundDark;
+  background: radial-gradient(circle at right 60%, #1f2833, transparent 150%),
+    radial-gradient(circle at left 60%, #304253, transparent 150%);
 }
 .wrapper {
   align-items: center;
@@ -36,6 +37,29 @@ nav {
   }
   .navMenu {
     margin-right: auto;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    list-style: none;
+
+    li {
+      margin-right: 30px;
+      text-transform: uppercase;
+      font-size: 18px;
+    }
+  }
+  @media (max-width: 1680px) {
+    li:nth-last-child(1) {
+      margin-left: auto;
+    }
+  }
+  @media (max-width: 1350px) {
+    li:nth-last-child(1) {
+      margin-left: 0;
+    }
+    li:nth-last-child(2) {
+      margin-left: auto;
+    }
   }
 }
 
@@ -43,8 +67,12 @@ nav {
   width: 60%;
   max-width: 1400px;
   display: flex;
-
+  .right,
   .left {
+    flex-direction: column;
+  }
+  .cLeft {
+    min-width: 690px;
     background-color: $textColorLight;
     width: 70%;
     @include flexCol();
@@ -132,7 +160,8 @@ nav {
       border-bottom: 1px $backgroundLight solid;
     }
   }
-  .right {
+  .cRight {
+    min-width: 295px;
     width: 30%;
     @include flexCol();
     background-color: $sidebarBackgroundDark;
