--- a/chiemgau48reloaded/style.scss
+++ b/chiemgau48reloaded/style.scss
@@ -1,17 +1,18 @@
 @import "reFlexFoo";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,800;1,300&display=swap");
-$backgroundLight: #e4f1fe;
-$backgroundDark: #22313f;
-$textColorLight: #34495e;
+$borderColor: #e4f1fe2a;
+$backgroundColorLight: #e4f1feef;
+$backgroundDark: #22313f49;
+$textColorLight: #34495e31;
 $sidebarBackgroundLight: #e4f1fe;
-$sidebarBackgroundDark: #304253;
+$sidebarBackgroundDark: #30425346;
 @mixin flexCol {
   display: flex;
   flex-direction: column;
 }
 
 :root {
-  color: $backgroundLight;
+  color: $backgroundColorLight;
   font: {
     family: "Open sans";
     size: 1rem;
@@ -77,7 +78,7 @@ nav {
     width: 70%;
     @include flexCol();
     .article {
-      border-bottom: 1px $backgroundLight solid;
+      border-bottom: 1px $borderColor solid;
       align-items: center;
       display: flex;
 
@@ -101,7 +102,7 @@ nav {
       margin-top: 10px;
       display: flex;
       padding-bottom: 10px;
-      border-bottom: 1px $backgroundLight solid;
+      border-bottom: 1px $borderColor solid;
       h3 {
         margin-block-start: 0px;
       }
@@ -110,7 +111,7 @@ nav {
         display: flex;
         width: 70%;
         font-size: 14px;
-        border-right: 1px $backgroundLight solid;
+        border-right: 1px $borderColor solid;
         img {
           padding: 10px;
           width: 200px;
@@ -122,7 +123,7 @@ nav {
         width: 30%;
         img {
           width: 90%;
-          padding: 0px 30 30px 30px;
+          margin: auto;
         }
       }
     }
@@ -130,14 +131,14 @@ nav {
       margin-top: 10px;
       display: flex;
       padding-bottom: 10px;
-      border-bottom: 1px $backgroundLight solid;
+      border-bottom: 1px $borderColor solid;
       h3 {
         margin-block-start: 0px;
       }
       .left {
         display: flex;
         width: 30%;
-        border-right: 1px $backgroundLight solid;
+        border-right: 1px $borderColor solid;
         img {
           width: 90%;
           padding: 10px;
@@ -157,7 +158,7 @@ nav {
       }
     }
     .articleText {
-      border-bottom: 1px $backgroundLight solid;
+      border-bottom: 1px $borderColor solid;
     }
   }
   .cRight {
