--- a/chiemgau48reloaded/style.css
+++ b/chiemgau48reloaded/style.css
@@ -39,11 +39,13 @@ nav {
   height: 220px;
   align-items: center;
   justify-content: center;
-  background-color: rgba(52, 73, 94, 0.1921568627);
 }
 nav img {
   height: 200px;
   position: absolute;
+}
+nav #open {
+  cursor: pointer;
 }
 nav .navMenu {
   margin-right: auto;
@@ -56,6 +58,7 @@ nav .navMenu li {
   margin-right: 30px;
   text-transform: uppercase;
   font-size: 18px;
+  cursor: pointer;
 }
 @media (max-width: 1680px) {
   nav li:nth-last-child(1) {
@@ -71,6 +74,10 @@ nav .navMenu li {
   }
 }
 
+.navBar {
+  display: none;
+}
+
 .content {
   width: 60%;
   max-width: 1400px;
@@ -82,7 +89,7 @@ nav .navMenu li {
 }
 .content .cLeft {
   min-width: 690px;
-  background-color: rgba(52, 73, 94, 0.1921568627);
+  background-color: rgba(52, 73, 94, 0.0392156863);
   width: 70%;
   display: flex;
   flex-direction: column;
@@ -127,7 +134,7 @@ nav .navMenu li {
   width: 200px;
 }
 .content .cLeft .dArticle .right {
-  background-color: rgba(52, 73, 94, 0.1921568627);
+  background-color: rgba(52, 73, 94, 0.0392156863);
   display: flex;
   width: 30%;
 }
@@ -157,7 +164,7 @@ nav .navMenu li {
 .content .cLeft .dArticle2 .right {
   -webkit-margin-before: 0;
           margin-block-start: 0;
-  background-color: rgba(52, 73, 94, 0.1921568627);
+  background-color: rgba(52, 73, 94, 0.0392156863);
   flex-direction: row;
   display: flex;
   width: 70%;
@@ -175,12 +182,90 @@ nav .navMenu li {
   width: 30%;
   display: flex;
   flex-direction: column;
-  background-color: rgba(48, 66, 83, 0.2745098039);
+  background-color: rgba(48, 66, 83, 0.0274509804);
   align-items: center;
-  justify-content: center;
 }
 .content .cRight .weather {
   width: 260px;
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.navOverlay {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .content .cLeft {
+    min-width: 450px;
+    width: 450px;
+  }
+  * {
+    font-size: 0.9rem;
+  }
+  img {
+    width: 50%;
+    height: 50%;
+  }
+  .navMenu {
+    display: none !important;
+  }
+  .navBar {
+    display: block;
+  }
+  .navBar #close {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+  }
+  .navBar img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 60px;
+    margin-top: 60px;
+    width: 50px;
+    height: 50px;
+  }
+  .navBar .navOverlay {
+    z-index: 1;
+    background-color: rgba(39, 55, 70, 0.7058823529);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 26%;
+    height: 100dvh;
+    list-style: none;
+    padding-top: 76px;
+    padding-left: 60px;
+  }
+  .navBar li {
+    font-size: 30px !important;
+    margin-bottom: 19px;
+    cursor: pointer;
+  }
+  .dArticle,
+  .dArticle2 {
+    flex-direction: column;
+  }
+  .dArticle .left,
+  .dArticle .right,
+  .dArticle2 .left,
+  .dArticle2 .right {
+    text-align: center;
+    width: 100% !important;
+    border-right: none !important;
+    border-left: none !important;
+  }
+  .dArticle .left,
+  .dArticle2 .left {
+    border-bottom: 1px rgba(228, 241, 254, 0.1647058824) solid;
+  }
+  .dArticle .right,
+  .dArticle2 .right {
+    padding-top: 10px;
+  }
 }/*# sourceMappingURL=style.css.map */
