--- a/chiemgau48reloaded/style.scss
+++ b/chiemgau48reloaded/style.scss
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,800;1,300&display=swap");
 $borderColor: #e4f1fe2a;
 $backgroundColorLight: #e4f1feef;
-$backgroundDark: #22313f49;
-$textColorLight: #34495e31;
+$backgroundDark: #22313f31;
+$textColorLight: #34495e0a;
 $sidebarBackgroundLight: #e4f1fe;
-$sidebarBackgroundDark: #30425346;
+$sidebarBackgroundDark: #30425307;
 @mixin flexCol {
   display: flex;
   flex-direction: column;
@@ -22,6 +22,7 @@ body {
   background: radial-gradient(circle at right 60%, #1f2833, transparent 150%),
     radial-gradient(circle at left 60%, #304253, transparent 150%);
 }
+
 .wrapper {
   align-items: center;
 }
@@ -31,10 +32,13 @@ nav {
   height: 220px;
   align-items: center;
   justify-content: center;
-  background-color: $textColorLight;
+  // background-color: $textColorLight;
   img {
     height: 200px;
     position: absolute;
+  }
+  #open {
+    cursor: pointer;
   }
   .navMenu {
     margin-right: auto;
@@ -47,6 +51,7 @@ nav {
       margin-right: 30px;
       text-transform: uppercase;
       font-size: 18px;
+      cursor: pointer;
     }
   }
   @media (max-width: 1680px) {
@@ -63,7 +68,9 @@ nav {
     }
   }
 }
-
+.navBar {
+  display: none;
+}
 .content {
   width: 60%;
   max-width: 1400px;
@@ -167,11 +174,85 @@ nav {
     @include flexCol();
     background-color: $sidebarBackgroundDark;
     align-items: center;
-    justify-content: center;
 
     .weather {
       width: 260px;
       height: fit-content;
+    }
+  }
+}
+.navOverlay {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .content .cLeft {
+    min-width: 450px;
+    width: 450px;
+  }
+  * {
+    font-size: 0.9rem;
+  }
+  img {
+    width: 50%;
+    height: 50%;
+  }
+  .navMenu {
+    display: none !important;
+  }
+  .navBar {
+    display: block;
+    #close {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+    }
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin-left: 60px;
+      margin-top: 60px;
+      width: 50px;
+      height: 50px;
+    }
+    .navOverlay {
+      z-index: 1;
+      background-color: #273746b4;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 26%;
+      height: 100dvh;
+      list-style: none;
+      padding-top: 76px;
+      padding-left: 60px;
+    }
+    li {
+      font-size: 30px !important;
+      margin-bottom: 19px;
+      cursor: pointer;
+    }
+  }
+  .content {
+  }
+  .dArticle,
+  .dArticle2 {
+    flex-direction: column;
+    .left,
+    .right {
+      text-align: center;
+      width: 100% !important;
+      border-right: none !important;
+      border-left: none !important;
+    }
+    .left {
+      border-bottom: 1px $borderColor solid;
+    }
+    .right {
+      padding-top: 10px;
     }
   }
 }
